[package]
name = "api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = "0.9.0"
futures = "0.3.28"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = "0.11.16"
schemars = "0.8.12"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
